--- a/app/src/main/res/layout/activity_display_chats.xml
+++ b/app/src/main/res/layout/activity_display_chats.xml
@@ -8,6 +8,22 @@
     android:background="?attr/background_color"
     tools:context=".Activities.DisplayChatsActivity">
 
+    <ProgressBar
+        android:id="@+id/pb_display_chats_matches"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:indeterminateDrawable="@drawable/my_progress_indeterminate"
+        android:translationZ="10dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@+id/rv_matches"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cl_logoarea"
+        app:layout_constraintVertical_bias="0.472" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_logoarea"
         android:layout_width="0dp"
