--- a/app/src/main/res/layout/activity_match_requests.xml
+++ b/app/src/main/res/layout/activity_match_requests.xml
@@ -68,7 +68,7 @@
         android:fontFamily="sans-serif-medium"
         android:text="Match Requests"
 
-        android:textColor="?attr/text_color"
+        android:textColor="@color/orangeAppColor"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/rv_matchrequestarea"
         app:layout_constraintStart_toStartOf="parent"
